e45f9fc5b2ceab3a1df6c44d82110fa8a1111fa4 Fix: Vertical alignment in header is now consistent across styles
https://datatables.net/forums/discussion/comment/240171/#Comment_240171

Sync to source repo @e45f9fc5b2ceab3a1df6c44d82110fa8a1111fa4

--- a/css/dataTables.bootstrap4.css
+++ b/css/dataTables.bootstrap4.css
@@ -6,6 +6,7 @@
   --dt-row-hover: 0, 0, 0;
   --dt-column-ordering: 0, 0, 0;
   --dt-header-align-items: center;
+  --dt-header-vertical-align: middle;
   --dt-html-background: white;
 }
 :root.dark {
@@ -329,6 +330,7 @@ table.dataTable thead td,
 table.dataTable tfoot th,
 table.dataTable tfoot td {
   text-align: left;
+  vertical-align: var(--dt-header-vertical-align);
 }
 table.dataTable thead th.dt-head-left,
 table.dataTable thead td.dt-head-left,
@@ -409,10 +411,6 @@ table.dataTable tbody td.dt-body-justify {
 table.dataTable tbody th.dt-body-nowrap,
 table.dataTable tbody td.dt-body-nowrap {
   white-space: nowrap;
-}
-
-:root {
-  --dt-header-align-items: flex-end;
 }
 
 table.dataTable.table {
